--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,4 +1,2 @@
-name=My Something Project
-description=Say something about this template.
-
-classy=Hello
+name=My awesome project
+groupId=com.example
